--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav ul li {
     font-size: 1.2em;
 }
 nav ul li a:visited {
-    color: gray;
+    color: black;
 }
 nav ul li a:hover {
     border-top: 3px #0065FC solid;
@@ -295,12 +295,13 @@ form {
 }
 #gauche {
     display: flex;
-    width: 47%;
+    width: 45%;
     margin-right: 90px;
 }
 #droite {
     display: flex;
-    width: 47%;
+    width: 45%;
+    margin-right: 30px;
 }
 .containerAct h3 {
     margin-left: 20px;
@@ -437,14 +438,38 @@ footer a {
     body { 
         width: auto;
     }
+    h1{
+        padding-top: 60px;
+        font-size: 1.4em;
+    }
+    h2 {
+        font-size: 1.3em !important;
+        margin-left: 20px !important;
+    }
+    h3 {
+        font-size: 1em !important;
+    }
+    p {
+        font-size: 0.9em !important;
+    }
 
     /* HEADER */
 
    ul {
        flex-direction: column-reverse;
    }
-   #inscription {
-       text-align: right;
+  
+   #menu {
+       justify-content: space-between;
+       padding-bottom: 20px;
+       position: absolute;
+       top: 80px;
+       right: 10px;
+       left: 50px;
+   }
+   #menu li a{
+       width: 45%;
+       padding: auto 20 auto 20;
    }
    nav ul li a:hover {
         border-bottom: 3px #0065FC solid;
@@ -466,8 +491,26 @@ footer a {
         width: 100%;
     }
     .mesFiltres {
-        margin-right: 15px;
+        margin-right: 10px;
+        margin-left: 0;
         margin-bottom: 20px;
+        width: auto;
+    }
+    .mesFiltres i{
+        font-size: medium;
+        margin: auto;
+        border: 1px solid transparent;
+        padding: 13px;
+        border-radius: 23px;
+        color: #0065FC;
+        background-color: #DEEBFF;
+     }
+     .mesFiltres .fa-child {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .mesFiltres p {
+        padding: 10px;
     }
     #localisation {
         width: auto;
@@ -486,23 +529,42 @@ footer a {
     }
     #populaires {
         width: auto;
-        margin: 0;   
+        margin: auto;
+        border-radius: 0;
+        border: 0;   
     }
     #hebergements {
         width: auto;
         margin: auto;
         background-color: white;
     }
+    #hebergements h2 {
+        margin-left: 10px;
+    }
     .vignettesHeb {
         width: 100%;
+        height: 190px;
         box-shadow: 6px 6px 6px 6px #F2F2F2;
-        margin: auto auto 30px auto;
+        margin: auto auto 15px auto;
+    }
+    .vignettesHeb .etoile {
+        font-size: small;
     }
     .vignettesHeb img {
         width: 100%;
+        height: 110px;
     }
     .vignettesPop {
         width: 90%;
+        margin-top: 0;
+        margin-bottom: 15px;
+    }
+    .vignettesPop img {
+        width: 40%;
+    }
+    .vignettesPop .etoile {
+        padding-top: 20px;
+        font-size: small;
     }
 
     /* SECTION 3 */ 
@@ -524,16 +586,23 @@ footer a {
         flex-direction: column;
         align-content: center;
         width: auto;
+        margin-right: auto;
     }
     .vignettesAct {
         width: 90% !important;
-        height: 250px !important;
-        margin: auto auto 30px auto;
+        height: 200px !important;
+        margin: auto auto 20px auto !important;
         
     }
     .vignettesAct img {
         width: 100% !important;
         height: 70% !important;
+    }
+    #imageSimpleDroite {
+        margin-left: 20px;
+    }
+    #imageSimpleGauche {
+        margin-left: 20px;
     }
 
     /* FOOTER */
