--- a/style.css
+++ b/style.css
@@ -458,29 +458,47 @@ footer a {
    ul {
        flex-direction: column-reverse;
    }
-  
+   #titre_principal img {
+       margin-left: 15px;
+       width: auto;
+   }
+   nav ul li {
+       font-size: 1em;
+   }
    #menu {
-       justify-content: space-between;
+       justify-content: space-around;
        padding-bottom: 20px;
        position: absolute;
        top: 80px;
-       right: 10px;
-       left: 50px;
+       left: 5px;
+       
    }
    #menu li a{
-       width: 45%;
-       padding: auto 20 auto 20;
+       padding-right: 50px;
+       padding-left: 50px;
+       padding-bottom: 10px;
+       margin-right: 0;
+       margin-left: 0;
+       border-bottom: 3px solid #F2F2F2;;
+   }
+   #menu li a:nth-child(1){
+       margin-right: -55px;
+   }
+   #inscription li a{
+       position: absolute;
+       top: 40px;
+       right: 20px;
    }
    nav ul li a:hover {
-        border-bottom: 3px #0065FC solid;
+        border-bottom: 3px #0065FC solid !important;
         border-top: none;
-        padding-bottom: 10px;
+        /* padding-bottom: 10px; */
         color: #0065FC;
    }
    nav ul li a:focus{
-        border-bottom: 3px #0065FC solid;
+        border-bottom: 3px #0065FC solid !important;
         border-top: none;
-        padding-bottom: 10px;
+        /* padding-bottom: 10px; */
         color: #0065FC;
    }
 
