--- a/style.css
+++ b/style.css
@@ -32,6 +32,15 @@ a {
 #menu {
     display: flex;
 }
+#topMenu {
+    display: flex;
+}
+#inscription {
+    padding-top: 50px;
+    margin-right: 30px;
+    color: #0065FC;
+    font-size: 1.2em;
+}
 .container p {
     margin-top: 5px; 
     font-size: 1.3em;
@@ -42,14 +51,14 @@ ul {
 }
 nav ul li {
     margin-right: 50px;
-    margin-top : 20px;
-    color: #0065FC;
+    color: black;
     font-size: 1.2em;
+    padding-top: 35px;
 }
 nav ul li a:visited {
     color: black;
 }
-nav ul li a:hover {
+nav ul li:hover {
     border-top: 3px #0065FC solid;
    padding-top: 35px;
    color: #0065FC;
@@ -214,6 +223,10 @@ form button {
     margin-bottom: 20px;
     background-color: white;
     border-radius: 15px;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 .vignettesHeb img {
     width : 300px;
@@ -228,6 +241,11 @@ form button {
 .vignettesHeb a p {
     font-size: 1em;
     margin: 7px 0 0 7px;
+}
+.vignettesHeb:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    border: 2px solid #0065FC;
 }
 #populaires{
     width: 30%;
@@ -247,6 +265,10 @@ form button {
     border-radius: 15px;
     background-color: white;
     margin-bottom: 40px;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 .vignettesPop img {
     width: 150px;
@@ -256,6 +278,11 @@ form button {
 }
 .vignettesPop a {
     display: flex;
+}
+.vignettesPop:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    border: 2px solid #0065FC;
 }
 #titrePop {
     display: flex;
@@ -311,10 +338,20 @@ form button {
     margin-left: 20px;
     color: black;
 }
+.vignettesAct {
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.vignettesAct:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
 #imageSimpleGauche {
     width: 370px;
     height: 570px;
-    margin-left: 30px;
+    margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 30px;
     border:  1px solid #F2F2F2;
@@ -442,10 +479,11 @@ footer a {
 
 
     body { 
-        width: auto;
+        width: 100%;
+        margin: 0;
     }
     h1{
-        padding-top: 60px;
+        padding-top: 25px;
         font-size: 1.4em;
         margin-bottom: 12px;
     }
@@ -462,52 +500,45 @@ footer a {
 
     /* HEADER */
 
-   ul {
-       flex-direction: column-reverse;
-   }
    #titre_principal img {
-       margin-left: 15px;
+       position: absolute;
+       top: 15px;
+       left: 1px;
        width: auto;
    }
-   nav ul li {
-       font-size: 1em;
+   #topMenu {
+       flex-direction: column-reverse;
+       width: 100%;
    }
-   #menu {
-       justify-content: space-around;
-       padding-bottom: 20px;
-       position: absolute;
-       top: 80px;
-       left: 5px;
+   #inscription {
+       align-self: flex-end;
+   }
+   nav ul {
+       margin: auto;
+       padding-left: 0;
+       width: auto;
        
    }
-   #menu li a{
-       padding-right: 50px;
-       padding-left: 50px;
-       padding-bottom: 10px;
+   nav ul li {
+       display: inline-flex;
        margin-right: 0;
-       margin-left: 0;
-       border-bottom: 3px solid #F2F2F2;;
+       justify-content: space-around;
+       padding-bottom: 10px;
+       border-bottom: 3px solid #F2F2F2;
+       width: 187px;
    }
-   #menu li a:nth-child(1){
-       margin-right: -55px;
+   nav ul li:nth-child(1){
+       padding-left: 15px;
    }
-   #inscription li a{
-       position: absolute;
-       top: 40px;
-       right: 20px;
-   }
-   nav ul li a:hover {
-        border-bottom: 3px #0065FC solid !important;
+   
+   nav ul li:hover {
+        border-bottom: 3px #0065FC solid;
         border-top: none;
-        /* padding-bottom: 10px; */
+        padding-bottom: 10px;
         color: #0065FC;
    }
-   nav ul li a:focus{
-        border-bottom: 3px #0065FC solid !important;
-        border-top: none;
-        /* padding-bottom: 10px; */
-        color: #0065FC;
-   }
+   
+    
 
     /* SECTION 1 */
 
@@ -554,10 +585,10 @@ footer a {
         padding: 10px;
     }
     #localisation {
-        width: auto;
+        width: 180px;
     }
     #localisation::placeholder {
-        font-size: 1em;
+        font-size: 0.8em;
     }
 
     /* SECTION 2 */
@@ -631,7 +662,8 @@ footer a {
         flex-direction: column;
         align-content: center;
         width: auto;
-        margin-right: auto;
+        margin-right: 0;
+        margin-left: 0;
     }
     .vignettesAct {
         width: 90% !important;
@@ -658,9 +690,11 @@ footer a {
     }
     #aPropos {
         width: 80%;
+        margin-right: 0;
     }
     #nosHebergements {
         margin-left: 30px;
+        margin-right: 0;
         width: 60%;
     }
     #assistance {
@@ -686,6 +720,19 @@ footer a {
     
     form {
         margin-top: 30px;
+    }
+    form .btn {
+        display: none;
+    }
+    form button {
+        display: inline-block;
+        background-color:  #0065FC;
+        color: white;
+        height: 50px;
+        width: 50px;
+        border: transparent;
+        border-radius: 15px 15px 15px 15px;
+        font-size: 1.2em;
     }
     .mesFiltres {
         margin-bottom: 20px;
