--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* BODY / GENERAL */
 
-
 body {
     font-family: 'Raleway', sans-serif;
+    width: 100%;
 }
 h1 {
     font-weight: bold;
@@ -12,14 +12,11 @@ h1 {
 h3 {
     font-size: 1.2em;
 }
-
 a {
     text-decoration: none;
 }
 
-
  /* HEADER */
-
 
 #titre_principal {
     display: flex;
@@ -37,8 +34,8 @@ a {
     display: flex;
 }
 #inscription {
-    padding-top: 50px;
-    margin-right: 30px;
+    padding-top: 35px;
+    margin-right: 80px;
     color: #0065FC;
     font-size: 1.2em;
 }
@@ -53,19 +50,25 @@ a {
 ul {
     list-style-type: none;
     display: flex;
+    margin-top: 0;
 }
 nav ul li {
     margin-right: 50px;
-    color: black;
     font-size: 1.2em;
     padding-top: 35px;
+}
+nav ul li a {
+    color: black;
 }
 nav ul li a:visited {
     color: black;
 }
 nav ul li:hover {
     border-top: 3px #0065FC solid;
-   padding-top: 35px;
+    padding-top: 35px;
+}
+nav ul li a:hover {
+    color: #0065FC;
 }
 nav ul li a:focus{
    border-top: 3px #0065FC solid;
@@ -75,7 +78,6 @@ nav ul li a:focus{
 #inscription a:visited {
     color: #0065FC;
 }
-
 
 /* SECTION 1 */
 
@@ -102,7 +104,8 @@ form button {
 #localisation::placeholder {
     color: black;
     padding: 15px;
-    font-size: 1.2em;
+    font-weight: bold;
+    font-family: 'Raleway', sans-serif;
 }
 .btn {
     background-color:  #0065FC;
@@ -114,6 +117,7 @@ form button {
     border: transparent;
     border-radius: 0 15px 15px 0;
     font-size: 1.2em;
+    cursor: pointer;
 }
 .gps {
     padding: 13px 20px;
@@ -133,8 +137,9 @@ form button {
     margin-right: 40px;
     margin-top: auto;
     margin-bottom: auto;
-    border: 2px solid #F2F2F2;
+    border: 3px solid #F2F2F2;
     border-radius: 35px;
+    cursor: pointer;
 }
 .mesFiltres i{
    font-size: x-large;
@@ -180,9 +185,7 @@ form button {
     margin-bottom: auto;
 }
 
-
 /* SECTION 2 */
-
 
 .containerHebPop {
     margin-bottom: 70px;
@@ -240,7 +243,11 @@ form button {
 .vignettesHeb:hover {
     box-shadow: 5px 5px 5px 5px black;
 }
-
+#more {
+    margin-top: 15px;
+    margin-left: 20px;
+    font-weight: bold;
+}
 .containerPop {
     width: 30%;
     background-color: #F2F2F2;
@@ -299,9 +306,7 @@ form button {
     margin-bottom: 30px;
 }
 
-
 /* SECTION 3 */
-
 
 #titreAct {
     margin-left: 35px;
@@ -386,9 +391,7 @@ form button {
     object-fit: cover;
 }
 
-
 /* FOOTER */
-
 
 footer {
     background-color: #F2F2F2;
@@ -419,7 +422,6 @@ footer a {
 
 
 
-
 /* MEDIA QUERIES */
 
 
@@ -427,7 +429,6 @@ footer a {
 @media all and (max-width : 480px)
 {
     /* GENERAL */
-
 
     body { 
         width: 100%;
@@ -446,7 +447,7 @@ footer a {
 
    #titre_principal img {
        position: absolute;
-       top: 15px;
+       top: 5px;
        left: 0;
        width: auto;
    }
@@ -457,12 +458,11 @@ footer a {
    #inscription {
        align-self: flex-end;
        font-size: 1em;
+       margin-right: 20px;
    }
    nav ul {
-       margin: auto;
        padding-left: 0;
        width: 100%;
-       
    }
    nav ul li {
        display: inline-flex;
@@ -483,9 +483,11 @@ footer a {
         padding-bottom: 10px;
         color: #0065FC;
    }
-   
+   nav ul li a:focus {
+    border-top: none;
+    padding-top: 0;
+    }
     
-
     /* SECTION 1 */
 
    .container {
@@ -546,6 +548,7 @@ footer a {
     #info p {
         font-size: 0.9em;
     }
+
     /* SECTION 2 */
 
     .containerHebPop {
@@ -557,6 +560,9 @@ footer a {
         width: auto;
         margin: auto;
         background-color: white;
+    }
+    #more {
+        margin-left: 0;
     }
     .containerPop {
         width: auto;
@@ -615,6 +621,9 @@ footer a {
         flex-direction: column;
         margin-bottom: 30px;
     }
+    #titreAct {
+        margin-left: 20px;
+    }
     #gauche {
         flex-direction: column;
         align-content: center;
@@ -643,7 +652,6 @@ footer a {
 
     /* FOOTER */
 
-
     footer {
         flex-direction: column;
     }
@@ -663,17 +671,18 @@ footer a {
 
 /* VERSION TABLETTE */
 
-
 @media all and (min-width: 481px) and (max-width: 1024px)
 {
+    /* GENERAL */
+
     body { 
         width: auto ;
     }
     h1 {
         margin-top: 35px;
     }
-    /* HEADER */
 
+    /* HEADER */
 
     #titre_principal img {
         position: absolute;
@@ -687,6 +696,7 @@ footer a {
     }
     #inscription {
         align-self: flex-end;
+        margin-right: 20px;
     }
     nav ul {
         margin: auto;
@@ -712,6 +722,11 @@ footer a {
          padding-bottom: 10px;
          color: #0065FC;
     }
+    nav ul li a:focus {
+        border-top: none;
+        padding-top: 0;
+    }
+
     /* SECTION 1 */
     
     form {
@@ -733,6 +748,7 @@ footer a {
     .mesFiltres {
         margin-bottom: 20px;
     }
+
     /* SECTION 2 */ 
 
     .containerHebPop {
@@ -764,14 +780,12 @@ footer a {
         width: 100%;
     }
 
-
     /*  SECTION 3 */
 
     .containerAct{
         width: auto;
         flex-direction: column;
         margin-bottom: 30px;
-        
     }
     #gauche {
         width: 100%;
@@ -793,34 +807,34 @@ footer a {
         width: 350px;
     }
 
-
     /* FOOTER */
 
-
     footer {
-        width: auto ;
+        flex-direction: column;
     }
     #aPropos {
-        margin-right: auto;
+        width: 80%;
+        margin-right: 0;
     }
     #nosHebergements {
-        margin-right: auto;
+        margin-left: 30px;
+        margin-right: 0;
+        width: 60%;
     }
-
+    #assistance {
+        margin-left: 30px;
+    }
 }
 
-/* VERSION PETIT ECRAN */ 
-
+/* VERSIONS ECRANS INTERMEDIAIRES */ 
 
 @media all and (min-width: 1025px) and (max-width: 1600px)
 {
     /* SECTION 1 */
 
-
     .mesFiltres {
         margin-bottom: 20px;
     }
-
 
     /* SECTION 2 */ 
 
@@ -835,7 +849,17 @@ footer a {
     .containerHeb {
         width: 51%;
     }
+
+    /* FOOTER */
+
+    #aPropos {
+        margin-right: 150px;
+    }
+    #nosHebergements {
+        margin-right: 150px;
+    }
 }
+
 @media all and (min-width: 1600px) and (max-width: 1763px)
 {
     /* SECTION 3 */
